Added some basic styling to the header

--- a/sites/all/themes/audible/css/audible.misc.css
+++ b/sites/all/themes/audible/css/audible.misc.css
@@ -1,5 +1,12 @@
-.page-header { background-color: #E6E6E6; }
+.page-header { background-color: #E6E6E6; *zoom: 1; }
+.page-header:after { content: ""; display: table; clear: both; }
+.page-header #logo { float: left; }
 .page-header a { text-decoration: none; color: black; }
-.page-header .icon-menu li { display: inline-block; }
-.page-header #menu-toggle { display: none; }
-.page-header label[for='menu-toggle'] { cursor: pointer; }
+.page-header .region-header { *zoom: 1; }
+.page-header .region-header:after { content: ""; display: table; clear: both; }
+.page-header .region-header .icon-menu { float: right; }
+.page-header .region-header .icon-menu li { padding: 10px; font-size: 1.5em; display: inline-block; }
+.page-header .region-header #menu-toggle { display: none; }
+.page-header .region-header label[for='menu-toggle'] { cursor: pointer; }
+.page-header .region-header .block-menu { background: #999; clear: both; display: none; }
+.page-header .region-header .block-menu h2 { display: none; }
