--- a/sites/all/themes/audible/sass/audible.misc.scss
+++ b/sites/all/themes/audible/sass/audible.misc.scss
@@ -1,5 +1,9 @@
 @import "base";
 
+.region-header {
+  float: right;
+  padding: 15px;
+}
 .page-header {
   background-color: #E6E6E6;
   @include pie-clearfix; // Clearfix.
