Added a hack so the background-image provided by the "Menu icon" module will be moved to a separate <img> tag

--- a/sites/all/themes/audible/sass/components/_tile.scss
+++ b/sites/all/themes/audible/sass/components/_tile.scss
@@ -2,10 +2,10 @@
  § Standard tile (small)
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .tile {
+  // NB! Do not add any background on this element! Only children of this one.
   width: 50%;
   float: left;
   overflow: hidden;
-  background: $gray;
   text-align: center;
   position: relative;
 
@@ -16,7 +16,6 @@
   }
 
   // We can't make an inset border on a image - lets pseudo our way out of this!
-
 
   img {
     width: 100%;
