--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -303,7 +303,7 @@ a:hover { text-decoration: none; }
 
 /* § Standard tile (small)
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.tile, .tile--large, .front #content .menu li { width: 50%; float: left; overflow: hidden; background: #e6e6e8; text-align: center; position: relative; }
+.tile, .tile--large, .front #content .menu li { width: 50%; float: left; overflow: hidden; text-align: center; position: relative; }
 .tile:hover, .tile--large:hover, .front #content .menu li:hover, .tile:focus, .tile--large:focus, .front #content .menu li:focus { cursor: pointer; opacity: .85; }
 .tile img, .tile--large img, .front #content .menu li img { width: 100%; }
 .tile a, .tile--large a, .front #content .menu li a { margin-bottom: 0; color: #fff; display: block; text-align: center; position: absolute; right: 12px; left: 12px; bottom: 12px; background: rgba(0, 0, 0, 0.65); padding: 5px; }
