--- a/sites/all/themes/audible/sass/components/_copy.scss
+++ b/sites/all/themes/audible/sass/components/_copy.scss
@@ -8,17 +8,18 @@
 // text element on the page.
 
 .copy {
+
   h1 {
-    @extend .heading--large;
+    @extend .heading--medium;
   }
   
   h2 {
-    @extend .heading--medium;
+    @extend .heading--small;
     margin-top: 1.1em;
   }
   
   h3 {
-    @extend .heading--small;
+    @extend .heading--extra-small;
     // margin-bottom: .25em;
     margin-top: 1.25em;
   }
@@ -37,6 +38,13 @@
 
   p {
     margin-bottom: .85em;
+
+    a {
+      &:hover,
+      &:focus {
+        text-decoration: underline;   
+      }
+    }
   }
 
   ul,
@@ -53,6 +61,21 @@
   }
 
   img {
-    margin: 1em 0 .85em * 2;  
+    margin: .4em 0 .85em + .25;  
+    width: 100%;
   }
-} // end copy
+
+  // Images with captions
+  figure {
+    img {
+      margin-bottom: .4em;
+    }
+
+    figcaption {
+      @extend .type--small;
+      margin-bottom: 1.2em;
+      color: $gray-darker;
+    }
+  }
+
+} //.copy
