--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -125,7 +125,7 @@ svg:not(:root) { overflow: hidden; }
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 html { font-family: sans-serif; }
 
-body { font-size: 15px; line-height: 1.45; color: #111111; letter-spacing: .02em; }
+body { font-size: 14px; line-height: 1.45; color: #111111; letter-spacing: .02em; }
 
 b, strong, .type--bold { font-weight: bold; }
 
@@ -133,10 +133,10 @@ i, em, .type--italic { font-style: italic; }
 
 strike, del, s, .type--strikethrough { text-decoration: line-through; }
 
-small, .type--s, .type--small { font-size: .85em; }
+small, .type--s, .type--small, .copy figure figcaption, .info-panel .content figure figcaption, .info-panel--expandable .content figure figcaption { font-size: .75em; }
 
-.list li small, .list--bulleted li small, .list--tickmarked li small, .copy ul li small, .list--numbered li small, .copy ol li small, .type--weak { color: #a2a2a5; }
-.list li small a, .list--bulleted li small a, .list--tickmarked li small a, .copy ul li small a, .list--numbered li small a, .copy ol li small a, .type--weak a { color: #8e93f6; }
+.list li small, .list--bulleted li small, .list--tickmarked li small, .copy ul li small, .info-panel .content ul li small, .info-panel--expandable .content ul li small, .list--numbered li small, .copy ol li small, .info-panel .content ol li small, .info-panel--expandable .content ol li small, .type--weak { color: #a2a2a5; }
+.list li small a, .list--bulleted li small a, .list--tickmarked li small a, .copy ul li small a, .info-panel .content ul li small a, .info-panel--expandable .content ul li small a, .list--numbered li small a, .copy ol li small a, .info-panel .content ol li small a, .info-panel--expandable .content ol li small a, .type--weak a { color: #8e93f6; }
 
 sup { font-size: 75%; top: -0.5em; }
 
@@ -154,13 +154,13 @@ a:hover { text-decoration: none; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § Heading
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.heading, .heading--extra-small, .copy h4, .tile a, .tile--large a, .front #content .menu li a, .heading--small, .copy h3, .delta-toggle-menu, .heading--medium, .copy h2, .heading--large, .copy h1, .button--l, .heading--extra-large, .heading--bordered { font-family: "hill bold", sans-serif; font-size: 1em; font-weight: normal; line-height: 1.16; margin-bottom: .5em; color: #111111; letter-spacing: -.005em; }
+.heading, .heading--extra-small, .copy h3, .info-panel .content h3, .info-panel--expandable .content h3, .copy h4, .info-panel .content h4, .info-panel--expandable .content h4, .tile a, .tile--large a, .tile--large:nth-child(even) a, .front #content .menu li a, .heading--small, .copy h2, .info-panel .content h2, .info-panel--expandable .content h2, .delta-toggle-menu, .heading--medium, .copy h1, .info-panel .content h1, .info-panel--expandable .content h1, .info-panel > h2, .info-panel--expandable > h2, .heading--large, .button--l, .heading--extra-large, .heading--bordered { font-family: "hill bold", sans-serif; font-size: 1em; font-weight: normal; line-height: 1.305; margin-bottom: .5em; color: #111111; letter-spacing: -.005em; }
 
-.heading--small, .copy h3, .delta-toggle-menu, .tile--large a { font-size: 1.2em; }
+.heading--small, .copy h2, .info-panel .content h2, .info-panel--expandable .content h2, .delta-toggle-menu, .tile--large a, .tile--large:nth-child(even) a { font-size: 1.2em; margin-bottom: .4em; }
 
-.heading--medium, .copy h2 { font-size: 1.75em; }
+.heading--medium, .copy h1, .info-panel .content h1, .info-panel--expandable .content h1, .info-panel > h2, .info-panel--expandable > h2 { font-size: 1.35em; margin-bottom: .35em; }
 
-.heading--large, .copy h1, .button--l { font-size: 2.75em; margin-bottom: .5em; letter-spacing: -.01em; }
+.heading--large, .button--l { font-size: 2.75em; margin-bottom: .5em; letter-spacing: -.01em; }
 
 .heading--extra-large { font-size: 3.5em; letter-spacing: -.03em; line-height: 1.015; }
 
@@ -172,21 +172,21 @@ a:hover { text-decoration: none; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § List
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.list li, .list--bulleted li, .list--tickmarked li, .copy ul li, .list--numbered li, .copy ol li { margin-bottom: .5em; position: relative; }
-.list li small, .list--bulleted li small, .list--tickmarked li small, .copy ul li small, .list--numbered li small, .copy ol li small { padding-left: 0.25em; }
+.list li, .list--bulleted li, .list--tickmarked li, .copy ul li, .info-panel .content ul li, .info-panel--expandable .content ul li, .list--numbered li, .copy ol li, .info-panel .content ol li, .info-panel--expandable .content ol li { margin-bottom: .5em; position: relative; }
+.list li small, .list--bulleted li small, .list--tickmarked li small, .copy ul li small, .info-panel .content ul li small, .info-panel--expandable .content ul li small, .list--numbered li small, .copy ol li small, .info-panel .content ol li small, .info-panel--expandable .content ol li small { padding-left: 0.25em; }
 
 /* § Bullet
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*ul*/
-.list--bulleted li, .list--tickmarked li, .copy ul li { padding-left: 1.25em; }
-.list--bulleted li:before, .list--tickmarked li:before, .copy ul li:before { content: "•"; position: absolute; left: 0; font-size: 1em; }
+.list--bulleted li, .list--tickmarked li, .copy ul li, .info-panel .content ul li, .info-panel--expandable .content ul li { padding-left: 1.25em; }
+.list--bulleted li:before, .list--tickmarked li:before, .copy ul li:before, .info-panel .content ul li:before, .info-panel--expandable .content ul li:before { content: "•"; position: absolute; left: 0; font-size: 1em; }
 
 /* § Number
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*ol*/
-.list--numbered, .copy ol { counter-reset: li; }
-.list--numbered li, .copy ol li { padding-left: 1.25em; }
-.list--numbered li:before, .copy ol li:before { content: counter(li) "."; counter-increment: li; position: absolute; left: 0; }
+.list--numbered, .copy ol, .info-panel .content ol, .info-panel--expandable .content ol { counter-reset: li; }
+.list--numbered li, .copy ol li, .info-panel .content ol li, .info-panel--expandable .content ol li { padding-left: 1.25em; }
+.list--numbered li:before, .copy ol li:before, .info-panel .content ol li:before, .info-panel--expandable .content ol li:before { content: counter(li) "."; counter-increment: li; position: absolute; left: 0; }
 
 /* § Tickmark
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -203,13 +203,16 @@ a:hover { text-decoration: none; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § Copy
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.copy h2 { margin-top: 1.1em; }
-.copy h3 { margin-top: 1.25em; }
-.copy h4 { margin-top: 1.6em; }
-.copy h5, .copy h6 { margin-top: 1.45em; font-style: italic; color: #e6e6e8; }
-.copy p { margin-bottom: .85em; }
-.copy ul, .copy ol { margin: 1.5em 0; }
-.copy img { margin: 1em 0 1.7em; }
+.copy h2, .info-panel .content h2, .info-panel--expandable .content h2 { margin-top: 1.1em; }
+.copy h3, .info-panel .content h3, .info-panel--expandable .content h3 { margin-top: 1.25em; }
+.copy h4, .info-panel .content h4, .info-panel--expandable .content h4 { margin-top: 1.6em; }
+.copy h5, .info-panel .content h5, .info-panel--expandable .content h5, .copy h6, .info-panel .content h6, .info-panel--expandable .content h6 { margin-top: 1.45em; font-style: italic; color: #e6e6e8; }
+.copy p, .info-panel .content p, .info-panel--expandable .content p { margin-bottom: .85em; }
+.copy p a:hover, .info-panel .content p a:hover, .info-panel--expandable .content p a:hover, .copy p a:focus, .info-panel .content p a:focus, .info-panel--expandable .content p a:focus { text-decoration: underline; }
+.copy ul, .info-panel .content ul, .info-panel--expandable .content ul, .copy ol, .info-panel .content ol, .info-panel--expandable .content ol { margin: 1.5em 0; }
+.copy img, .info-panel .content img, .info-panel--expandable .content img { margin: 0.4em 0 1.1em; width: 100%; }
+.copy figure img, .info-panel .content figure img, .info-panel--expandable .content figure img { margin-bottom: .4em; }
+.copy figure figcaption, .info-panel .content figure figcaption, .info-panel--expandable .content figure figcaption { margin-bottom: 1.2em; color: #5f5f60; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § Button
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -264,7 +267,7 @@ a:hover { text-decoration: none; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § Main header
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.page-header { position: relative; height: 42px; background: #fff; padding: 0 12px; margin-bottom: 20px; -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); }
+.page-header { z-index: 999; position: relative; height: 42px; background: #fff; padding: 0 12px; -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); }
 
 /* § Logo
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -285,9 +288,7 @@ a:hover { text-decoration: none; }
 .icon-menu input { display: none; }
 
 label[for="menu-toggle"]:hover, label[for="menu-toggle"]:focus { outline: none; }
-label[for="menu-toggle"]:before { -webkit-transition: 0.2s; -moz-transition: 0.2s; -o-transition: 0.2s; transition: 0.2s; }
 label[for="menu-toggle"].active { background: #111111; color: #fff; }
-label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz-transform: rotate(360deg); -ms-transform: rotate(360deg); -o-transform: rotate(360deg); transform: rotate(360deg); }
 
 /* § Search
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -305,16 +306,46 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 
 /* § Standard tile (small)
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.tile, .tile--large, .front #content .menu li { width: 50%; float: left; overflow: hidden; text-align: center; position: relative; }
+.tile, .tile--large, .tile--large:nth-child(even), .front #content .menu li { width: 50%; float: left; overflow: hidden; text-align: center; position: relative; margin-bottom: 12px; padding-right: 6px; }
 .tile:hover, .tile--large:hover, .front #content .menu li:hover, .tile:focus, .tile--large:focus, .front #content .menu li:focus { cursor: pointer; opacity: .85; }
-.tile img, .tile--large img, .front #content .menu li img { width: 100%; }
-.tile a, .tile--large a, .front #content .menu li a { margin-bottom: 0; color: #fff; display: block; text-align: center; position: absolute; right: 12px; left: 12px; bottom: 12px; background: rgba(0, 0, 0, 0.65); padding: 5px; }
+.tile img, .tile--large img, .tile--large:nth-child(even) img, .front #content .menu li img { width: 100%; }
+.tile a, .tile--large a, .tile--large:nth-child(even) a, .front #content .menu li a { font-family: 'hill regular', sans-serif; margin-bottom: 0; color: #fff; display: block; text-align: center; position: absolute; right: 6px; left: 0; bottom: 0; background: #111111; padding: 10px 5px 12px; }
+
+/* § Every second tile
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.tile:nth-child(even), .tile--large:nth-child(even), .front #content .menu li:nth-child(even) { padding-right: 0; padding-left: 6px; }
+.tile:nth-child(even) a, .tile--large:nth-child(even) a, .front #content .menu li:nth-child(even) a { right: 0; left: 6px; }
 
 /* § Large tile
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.tile--large { width: 100%; float: none; }
+.tile--large, .tile--large:nth-child(even) { padding: 0; width: 100%; float: none; }
+.tile--large a, .tile--large:nth-child(even) a { padding: 12px 5px 13px; right: 0; left: 0; }
 
-.icon, .icon--facebook:before, .icon--mail-2:before, .icon--mail-1:before, .icon--pause:before, .icon--play:before, .icon--angle-up:before, .icon--angle-right:before, .icon--angle-left:before, .icon--angle-down:before, .icon--smk:before, #logo:before, .icon--search:before, .icon-menu .fa-search:before, .icon--menu:before, label[for="menu-toggle"]:before, .icon--listen-2:before, .icon--listen-1:before, .icon-menu .fa-th:before, .icon--info-2:before, .icon--info-1:before, .icon--cross:before, label[for="menu-toggle"].active:before, .icon--arrow-up:before, .icon--arrow-right:before, .icon--arrow-left:before, .icon--arrow-down:before { font-family: 'smk_audible_icons'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+/* § "All artworks" and "All routes"
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.tile--utility a, .front #content .menu .tile--artworks a, .front #content .menu .tile--routes a { text-shadow: none; }
+
+/* § Default
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.info-panel, .info-panel--expandable { position: relative; background: #f2f2f4; padding: 18px 12px 10px; -webkit-box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); text-align: center; }
+.info-panel.open, .open.info-panel--expandable { text-align: left; }
+
+/* § Expandable
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.info-panel--expandable { padding-bottom: 36px; }
+.info-panel--expandable .toggle { display: block; height: 34px; width: 100%; color: rgba(0, 0, 0, 0.4); line-height: 36px; position: absolute; bottom: 0; left: 0; text-align: center; font-size: 22px; }
+.info-panel--expandable .toggle:hover, .info-panel--expandable .toggle:focus { color: #111111; }
+.info-panel--expandable .open:before { content: "\e605" !important; }
+
+/* § List
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/* § List item
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.compact-list__item, .page-route .view-content .views-row { border-bottom: 1px solid #e6e6e8; position: relative; height: 71px; }
+.compact-list__item .thumbnail-wrapper, .page-route .view-content .views-row .thumbnail-wrapper { width: 70px; position: absolute; top: 0; left: 0; }
+.compact-list__item .thumbnail-wrapper span, .page-route .view-content .views-row .thumbnail-wrapper span { display: inline-block; background: #111111; color: #fff; padding: 4px 10px; min-width: 24px; border-radius: 50px; text-align: center; line-height: normal; font-family: 'hill bold'; font-size: 16px; position: absolute; top: 32%; left: 50%; }
+
+.icon, .icon--facebook:before, .icon--mail-2:before, .icon--mail-1:before, .icon--pause:before, .icon--play:before, .icon--angle-up:before, .icon--angle-right:before, .icon--angle-left:before, .icon--angle-down:before, .info-panel--expandable .toggle:before, .icon--smk:before, #logo:before, .icon--search:before, .icon-menu .fa-search:before, .icon--menu:before, label[for="menu-toggle"]:before, .icon--listen-2:before, .icon--listen-1:before, .icon-menu .fa-th:before, .icon--info-2:before, .icon--info-1:before, .icon--cross:before, label[for="menu-toggle"].active:before, .icon--arrow-up:before, .icon--arrow-right:before, .icon--arrow-left:before, .icon--arrow-down:before { font-family: 'smk_audible_icons'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
 .icon--facebook:before { content: "\e600"; }
 
@@ -332,7 +363,7 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 
 .icon--angle-left:before { content: "\e607"; }
 
-.icon--angle-down:before { content: "\e608"; }
+.icon--angle-down:before, .info-panel--expandable .toggle:before { content: "\e608"; }
 
 .icon--smk:before, #logo:before { content: "\e609"; }
 
@@ -366,5 +397,6 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 .page-choose-lang #content h1 { margin-bottom: 1.25em; }
 
 /*body*/
-.front .page-header { margin-bottom: 0; }
+.front .page-header { margin-bottom: 2px; }
 .front .node-generic-page > h2 { display: none; }
+.front #content { padding: 12px; }
