--- a/sites/all/themes/audible/sass/_variables.scss
+++ b/sites/all/themes/audible/sass/_variables.scss
@@ -37,6 +37,7 @@ $xl: 3.5em;  // Extra large
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 $black:        #111;
 
+$gray-lighter: #f2f2f4;
 $gray:         #e6e6e8;
 $gray-dark:    #a2a2a5;
 $gray-darker:  #5f5f60;
@@ -56,7 +57,7 @@ $blue:         #0ea7e2;
 /*
  § Type
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-$font-size:   15px;
+$font-size:   14px;
 $line-height: 1.45;
 $font-family: sans-serif;
 $font-color:  $black;
