--- a/sites/all/themes/audible/sass/components/_heading.scss
+++ b/sites/all/themes/audible/sass/components/_heading.scss
@@ -7,7 +7,7 @@
   font-family: $heading-font-family;
   font-size: 1em;
   font-weight: normal;
-  line-height: $line-height * .8;
+  line-height: $line-height * .9;
   margin-bottom: .5em;
   color: $black;
   letter-spacing: -.005em;
@@ -22,12 +22,14 @@
 .heading--small {
   @extend .heading;
   font-size: 1.2em;
+  margin-bottom: .4em;
 }
 
 // Medium
 .heading--medium {
   @extend .heading;
-  font-size: 1.75em;
+  font-size: 1.35em;
+  margin-bottom: .35em;
 }
 
 // Large
