--- a/sites/all/themes/audible/sass/pages/_home.scss
+++ b/sites/all/themes/audible/sass/pages/_home.scss
@@ -2,9 +2,8 @@
 
 /*body*/.front {
 
-  // Make tiles snap to page header
   .page-header {
-    margin-bottom: 0;
+    margin-bottom: 2px; // Just fucking flies. Nothing to see here.
   }
 
   // Hide the page title
@@ -13,11 +12,25 @@
   }
   
   #content {
+    padding: 12px;
 
     .menu li {
       @extend .tile; // See _tile.scss
     }
 
+    .menu .tile--artworks,
+    .menu .tile--routes {
+      @extend .tile--utility; // See _tile.scss
+    }
+
+    .menu .tile--artworks {
+      @extend .tile--artworks; // See _tile.scss
+    }
+
+    .menu .tile--routes {
+      @extend .tile--routes; // See _tile.scss
+    }
+
   }//#content
 
-} // .front
+}//.front
