--- a/sites/all/themes/audible/css/admin.css
+++ b/sites/all/themes/audible/css/admin.css
@@ -1,7 +1,6 @@
-.admin-tabs { clear: both; }
-.admin-tabs ul { display: flex; }
-.admin-tabs li { display: block; vertical-align: bottom; }
-.admin-tabs li a { color: #000; background-color: #A6A7A2; padding: 5px 10px 3px; line-height: 140%; margin: 0 3px; }
-.admin-tabs li.active a { background-color: #ffffff; }
+.admin-tabs { margin: 0 -12px; clear: both; }
+.admin-tabs .tabs.primary { border-top: 2px solid black; padding: 5px 0 4px 0; display: flex; }
+.admin-tabs .tabs.primary li a { padding: 5px 10px 3px 10px; background: #b3b3b3; margin: 0 3px; color: #000; }
+.admin-tabs .tabs.primary li.active a { background: #000; color: white; }
 
 .element-invisible { display: none; }
