--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -267,7 +267,7 @@ a:hover { text-decoration: none; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § Main header
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.page-header { z-index: 999; position: relative; height: 42px; background: #fff; padding: 0 12px; -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); }
+.page-header { z-index: 999; position: relative; background: #fff; padding: 0 12px; -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); }
 
 /* § Logo
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
