Added newest wireframe-design SASS files and altered them to fit our project

--- a/sites/all/themes/audible/sass/audible.scss
+++ b/sites/all/themes/audible/sass/audible.scss
@@ -7,6 +7,8 @@
 
 // Compass
 @import "compass/css3";
+@import "compass/css3/user-interface";
+@import "compass/utilities/general/clearfix";
 
 // Variables
 @import "variables";
@@ -20,7 +22,6 @@
 
 // Global layout
 @import "components/layout";
-
 
 // Typography
 @import "components/fonts";   // Load custom font with @fontface.
@@ -37,7 +38,14 @@
 @import "components/delta-toggle-menu";
 @import "components/tile";
 @import "components/info-panel";
+@import "components/search-panel";
 @import "components/compact-list";
+@import "components/audio-id";
+@import "components/mediaelement-audio";
+@import "components/artwork-container";
+@import "components/share-links";
+@import "components/number-pad";
+@import "components/foldout";
 
 // Icons
 @import "components/icons";
@@ -47,3 +55,8 @@
 @import "pages/choose-lang";
 @import "pages/home";
 @import "pages/route";
+@import "pages/search-results";
+@import "pages/number-pad-search-results";
+@import "pages/generic-page";
+@import "pages/all-routes";
+@import "pages/all-artworks";
