--- a/sites/all/themes/audible/sass/pages/_all-artworks.scss
+++ b/sites/all/themes/audible/sass/pages/_all-artworks.scss
@@ -1,9 +1,10 @@
-// Route
+// All artworks
 
-.page-route {
+.page-all-artworks {
 
   // Extending compact-list styles to view rows
   .view-content {
+    @extend .compact-list--search;
 
     .views-row {
       @extend .compact-list__item;
