--- a/sites/all/themes/audible/sass/components/_info-panel.scss
+++ b/sites/all/themes/audible/sass/components/_info-panel.scss
@@ -8,6 +8,7 @@
   padding: 18px 12px 10px;
   @include box-shadow(inset 0 -1px 4px 0 rgba(0, 0, 0, .1) );
   text-align: center;
+  border-top: 1px solid rgba(0, 0, 0, .1);
 
   &.open {
     text-align: left;
@@ -21,6 +22,13 @@
   // Content
   .content {
     @extend .copy; // see _copy.scss
+  }
+
+  // Help text
+  .help-text {
+    @extend .type--small-stylish;
+    margin-top: -.4em;
+    margin-bottom: .8em;
   }
 
 }//.info-panel
