--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -603,5 +603,7 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 .front .node-generic-page > h2 { display: none; }
 .front #content { padding: 12px; }
 
+.page-number-search form { display: none; }
+
 .page-generic .page-title { margin: 14px 12px; padding-bottom: 12px; border-bottom: 1px solid #e6e6e8; }
 .page-generic .copy, .page-generic .info-panel .content, .info-panel .page-generic .content, .page-generic .info-panel--expandable .content, .info-panel--expandable .page-generic .content, .page-generic .search-panel .content, .search-panel .page-generic .content { padding: 0 12px 12px; }
