Set up display-suite settings for Piece|teaser & adjusted the styling for "All artworks" to fit with it.

--- a/sites/all/themes/audible/sass/pages/_all-artworks.scss
+++ b/sites/all/themes/audible/sass/pages/_all-artworks.scss
@@ -1,6 +1,6 @@
 // All artworks
 
-.page-all-artworks {
+.node-type-generic-page .view-artworks {
 
   // Extending compact-list styles to view rows
   .view-content {
