--- a/sites/all/themes/audible/sass/_variables.scss
+++ b/sites/all/themes/audible/sass/_variables.scss
@@ -1,6 +1,7 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\
  § Variables
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+$header-height: 42px;
 
 /*
  § Screen sizes (used in media queries).
