--- a/sites/all/themes/audible/css/admin.css
+++ b/sites/all/themes/audible/css/admin.css
@@ -1,6 +1,7 @@
 .admin-tabs { margin: 0 -12px; clear: both; }
-.admin-tabs .tabs.primary { border-top: 2px solid black; padding: 5px 0 4px 0; display: flex; }
+.admin-tabs .tabs.primary { border-top: 2px solid black; padding: 5px 0 4px 0; }
+.admin-tabs .tabs.primary li { display: inline-block; }
 .admin-tabs .tabs.primary li a { padding: 5px 10px 3px 10px; background: #b3b3b3; margin: 0 3px; color: #000; }
-.admin-tabs .tabs.primary li.active a { background: #000; color: white; }
+.admin-tabs .tabs.primary li a.active { background: #000; color: white; }
 
 .element-invisible { display: none; }
