--- a/sites/all/themes/audible/sass/admin.scss
+++ b/sites/all/themes/audible/sass/admin.scss
@@ -6,17 +6,17 @@
   .tabs.primary {
     border-top: 2px solid black;
     padding: 5px 0 4px 0;
-    display: flex;
     li {
+      display: inline-block;
       a {
         padding: 5px 10px 3px 10px;
         background: #b3b3b3;
         margin: 0 3px;
         color: #000;
-      }
-      &.active a {
-        background: #000;
-        color: #fff
+        &.active {
+          background: #000;
+          color: #fff
+        }
       }
     }
   }
